# fractal

./: .gitignore  CMakeLists.txt  Makefile  imgui.ini
include/: presets.hpp  renderer.hpp  shader.hpp  state.hpp  utils.hpp
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: main.cpp  presets.cpp  renderer.cpp  shader.cpp  utils.cpp
